fix: spacing in header

--- a/pokemon-markets/css/styles.css
+++ b/pokemon-markets/css/styles.css
@@ -210,9 +210,9 @@ button {
 .header__container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   height: 100%;
   gap: var(--space-4);
+  padding: 0 var(--space-6);
 }
 
 .header__brand {
